Fixed bug #76965 INI_SCANNER_RAW doesn't strip trailing whitespace